--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=KATalyzt36 Plugins Repo
+author=EthanVann, KATalyzt36
 support=
-description=An example greeter plugin
+description=Repository of a noob
 tags=
 plugins=com.example.ExamplePlugin
