--- a/build.gradle
+++ b/build.gradle
@@ -87,6 +87,19 @@ task AllKATPluginsNoEthanAPI(type: Jar) {
     with jar
 }
 
+task AllKATPluginsNoAPIs(type: Jar) {
+    group = 'Export/Compile'
+    description = 'KATPluginsNoApis to JAR file'
+    manifest {
+    }
+    baseName = 'AllKATPluginsNoAPIs'
+    exclude("com/example")
+    exclude("net.kat.api")
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
 task katapi(type: Jar) {
     group = 'Export/Compile'
     description = 'katapi to JAR file'
@@ -94,8 +107,9 @@ task katapi(type: Jar) {
     }
     baseName = 'katapi'
     exclude("com.example")
-    exclude("net.kat.inventoryids")
-    exclude("net.kat.spell2key")
+    exclude("net.kat.utilities.inventoryids")
+    exclude("net.kat.utilities.spell2key")
+    exclude("net.kat.utilities.neverlog")
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
@@ -108,8 +122,9 @@ task inventoryIDs(type: Jar) {
     }
     baseName = 'inventoryIDs'
     exclude("com.example")
-    exclude("net.kat.katapi")
-    exclude("net.kat.spell2key")
+    exclude("net.kat.api")
+    exclude("net.kat.utilities.spell2key")
+    exclude("net.kat.utilities.neverlog")
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
@@ -122,8 +137,24 @@ task spell2key(type: Jar) {
     }
     baseName = 'spell2key'
     exclude("com.example")
-    exclude("net.kat.katapi")
-    exclude("net.kat.invetoryids")
+    exclude("net.kat.api")
+    exclude("net.kat.utilities.inventoryids")
+    exclude("net.kat.utilities.neverlog")
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
+task neverlog(type: Jar) {
+    group = 'Export/Compile'
+    description = 'NeverLog to JAR file'
+    manifest {
+    }
+    baseName = 'neverlog'
+    exclude("com.example")
+    exclude("net.kat.api")
+    exclude("net.kat.utilities.inventoryids")
+    exclude("net.kat.utilities.spell2key")
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
